// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Snapshots App.js renders correctly 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={false}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    style={
      Object {
        "backgroundColor": "#eee",
        "flex": 1,
        "flexDirection": "column-reverse",
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="auto"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "opacity": 1,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": 0,
              },
            ],
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          style={
            Object {
              "backgroundColor": "#fff",
              "flex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "column",
                "height": undefined,
                "justifyContent": "flex-start",
                "width": undefined,
              }
            }
          >
            <View
              accessibilityIgnoresInvertColors={true}
              style={
                Object {
                  "height": "100%",
                  "width": "100%",
                }
              }
            >
              <Image
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://s30226.pcdn.co/wp-content/uploads/2015/02/half-moon-party-dates.jpg",
                  }
                }
                style={
                  Array [
                    Object {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    Object {
                      "height": "100%",
                      "width": "100%",
                    },
                    Object {
                      "opacity": 0.7,
                    },
                  ]
                }
              />
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "flexDirection": "column",
                    "justifyContent": "flex-start",
                  }
                }
              >
                <Image
                  source={1}
                  style={
                    Object {
                      "height": 200,
                      "marginTop": 100,
                      "width": 200,
                    }
                  }
                />
                <View>
                  <View
                    accessible={true}
                    isTVSelectable={true}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "backgroundColor": "#FF5857",
                        "borderRadius": 25,
                        "marginTop": 30,
                        "padding": 10,
                        "width": 300,
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#fff",
                          "fontSize": 24,
                          "fontWeight": "bold",
                          "textAlign": "center",
                        }
                      }
                    >
                      Create Playlist
                    </Text>
                  </View>
                  <View
                    accessible={true}
                    isTVSelectable={true}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "backgroundColor": "#FF5857",
                        "borderRadius": 25,
                        "marginTop": 30,
                        "opacity": 1,
                        "padding": 10,
                        "width": 300,
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#fff",
                          "fontSize": 24,
                          "fontWeight": "bold",
                          "textAlign": "center",
                        }
                      }
                    >
                      Join Playlist
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      pointerEvents="box-none"
      style={
        Object {
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#fff",
            "transform": Array [
              Object {
                "translateX": -750,
              },
            ],
          }
        }
      >
        <View
          onLayout={[Function]}
          pointerEvents="box-none"
          style={
            Object {
              "backgroundColor": "#fff",
              "borderBottomColor": "#a7a7aa",
              "borderBottomWidth": 0.5,
              "height": 64,
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 20,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Component Snapshots CreatePlaylistForm renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#423959",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-start",
    }
  }
>
  <View>
    <Text
      style={
        Object {
          "color": "white",
          "fontSize": 30,
          "fontWeight": "bold",
          "marginTop": 80,
          "textAlign": "center",
        }
      }
    >
      Create Playlist
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "justifyContent": "center",
        "paddingTop": 15,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      collapsable={false}
      maxLength={100}
      onChangeText={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      placeholder="Playlist Title"
      rejectResponderTermination={true}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#E9DBFF",
          "borderColor": "#fff",
          "borderRadius": 30,
          "borderWidth": 1,
          "flexDirection": "row",
          "fontSize": 18,
          "height": 45,
          "marginBottom": 20,
          "textAlign": "center",
          "width": 250,
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <TextInput
      allowFontScaling={true}
      collapsable={false}
      maxLength={50}
      onChangeText={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      placeholder="Your Name"
      rejectResponderTermination={true}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#E9DBFF",
          "borderColor": "#fff",
          "borderRadius": 30,
          "borderWidth": 1,
          "flexDirection": "row",
          "fontSize": 18,
          "height": 45,
          "marginBottom": 20,
          "textAlign": "center",
          "width": 250,
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <TextInput
      allowFontScaling={true}
      collapsable={false}
      maxLength={50}
      onChangeText={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      placeholder="Your Playlist Passcode"
      rejectResponderTermination={true}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#E9DBFF",
          "borderColor": "#fff",
          "borderRadius": 30,
          "borderWidth": 1,
          "flexDirection": "row",
          "fontSize": 18,
          "height": 45,
          "marginBottom": 20,
          "textAlign": "center",
          "width": 250,
        }
      }
      underlineColorAndroid="transparent"
      value={null}
    />
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#FF5857",
          "borderRadius": 25,
          "opacity": 1,
          "padding": 15,
          "width": 200,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 20,
            "fontWeight": "bold",
            "textAlign": "center",
          }
        }
      >
        Create
      </Text>
    </View>
  </View>
</View>
`;

exports[`Component Snapshots HomeScreen renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "height": undefined,
      "justifyContent": "flex-start",
      "width": undefined,
    }
  }
>
  <View
    accessibilityIgnoresInvertColors={true}
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <Image
      resizeMode="cover"
      source={
        Object {
          "uri": "https://s30226.pcdn.co/wp-content/uploads/2015/02/half-moon-party-dates.jpg",
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": "100%",
            "width": "100%",
          },
          Object {
            "opacity": 0.7,
          },
        ]
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "flex-start",
        }
      }
    >
      <Image
        source={1}
        style={
          Object {
            "height": 200,
            "marginTop": 100,
            "width": 200,
          }
        }
      />
      <View>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#FF5857",
              "borderRadius": 25,
              "marginTop": 30,
              "padding": 10,
              "width": 300,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#fff",
                "fontSize": 24,
                "fontWeight": "bold",
                "textAlign": "center",
              }
            }
          >
            Create Playlist
          </Text>
        </View>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#FF5857",
              "borderRadius": 25,
              "marginTop": 30,
              "opacity": 1,
              "padding": 10,
              "width": 300,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#fff",
                "fontSize": 24,
                "fontWeight": "bold",
                "textAlign": "center",
              }
            }
          >
            Join Playlist
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
